--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://johannphilippe.github.io/build/index.html">
+<meta http-equiv="refresh" content="0; url=https://johannphilippe.github.io/build/web/index.html">
